# Sistema-De-Gerenciamento-de-V-deo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-cuda.txt  requirements.txt
config/: demo.yaml  file.example.yaml  rtsp.example.yaml
gesec_viewer/: __init__.py  app.py  benchmark.py  camera_store.py  cli.py  config.py  fps.py  frames.py  gpu.py  performance.py  processor.py  ptz.py  recording.py  widgets.py  worker.py
scripts/: benchmark.py  generate_demo_videos.py  run_docker_x11.sh  start_demo_streams.sh
tests/: test_benchmark.py  test_cli.py  test_config.py  test_fps.py  test_performance.py  test_processor.py  test_ptz.py  test_recording.py  test_widgets.py  test_worker.py
