[project]
name = "gesec-viewer"
version = "0.1.0"
description = "Mini VMS viewer em PyQt5 com OpenCV, threads e GPU opcional."
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15,<6",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "PyYAML>=6",
    "Pillow>=10",
    "onvif-zeep>=0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
